WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177049
[Harfbuzz] adjustSelectionRectForComplexText() should also pass the character range when shaping
https://bugs.webkit.org/show_bug.cgi?id=177049
Summary
[Harfbuzz] adjustSelectionRectForComplexText() should also pass the character...
Carlos Garcia Campos
Reported
2017-09-17 02:58:22 PDT
Now that the shaper support receiving a range we should use that also in adjustSelectionRectForComplexText(). This will ensure consistent results with getGlyphsAndAdvancesForComplexText().
Attachments
Patch
(2.17 KB, patch)
2017-09-17 02:59 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-09-17 02:59:58 PDT
Created
attachment 321040
[details]
Patch
Michael Catanzaro
Comment 2
2017-09-17 06:02:16 PDT
Comment on
attachment 321040
[details]
Patch What test does this fix?
Carlos Garcia Campos
Comment 3
2017-09-17 22:25:40 PDT
(In reply to Michael Catanzaro from
comment #2
)
> Comment on
attachment 321040
[details]
> Patch > > What test does this fix?
This doesn't affect test results.
WebKit Commit Bot
Comment 4
2017-09-17 23:16:57 PDT
Comment on
attachment 321040
[details]
Patch Rejecting
attachment 321040
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 321040, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ing rebase: :040000 040000 6e14de628b80008549948a8e0122f4bf62c40f9a 86a8d7212f99ef652aa59bf346f93989ecd2afbd M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output:
http://webkit-queues.webkit.org/results/4580742
Carlos Garcia Campos
Comment 5
2017-09-18 23:35:37 PDT
Committed
r222202
: <
http://trac.webkit.org/changeset/222202
>
Radar WebKit Bug Importer
Comment 6
2017-09-27 12:31:57 PDT
<
rdar://problem/34693439
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug