[Harfbuzz] adjustSelectionRectForComplexText() should also pass the character range when shaping https://bugs.webkit.org/show_bug.cgi?id=177049

Reviewed by Michael Catanzaro.

Now that the shaper support receiving a range we should use that also in
adjustSelectionRectForComplexText(). This will ensure consistent results with
getGlyphsAndAdvancesForComplexText().

* platform/graphics/cairo/FontCairoHarfbuzzNG.cpp:
(WebCore::FontCascade::adjustSelectionRectForComplexText const):

Canonical link: https://commits.webkit.org/193524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222202 268f45cc-cd09-0410-ab3c-d52691b4dbfc